--- a/src/style.css
+++ b/src/style.css
@@ -8,13 +8,14 @@ body {
     font-family: 'Bebas Neue', cursive;
     overflow: auto;
 }
+
 /* Container, navbar, and footer css  */
 
-.container{
+.container {
     border: 5px solid #9CC4B2;
 }
 
-.navbar{
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,40 +25,42 @@ body {
     margin: auto;
 }
 
-.logo{
+.logo {
     font-size: 1.6rem;
 }
 
-.nav-toggle{
+.nav-toggle {
     display: none;
 }
 
-.menu{
+.menu {
     display: flex;
     list-style: none;
     padding: 0px;
     margin: 0px;
 }
 
-.menu li{
+.menu li {
     display: inline;
     margin: 0 5px;
     font-size: 1.6rem;
 }
 
-.menu a {
+.menu a,
+.logo a {
     text-decoration: none;
 }
 
-.menu a:visited{
+.menu a:visited,
+.logo a:visited {
     color: #9CC4B2;
 }
 
-.menu a.active{
+.menu a.active {
     color: #9b6dc2;
 }
 
-.footer{
+.footer {
     height: 50px;
     display: flex;
     justify-content: center;
@@ -77,7 +80,7 @@ body {
 
 /* main info css */
 
-.info-container{
+.info-container {
     height: calc(100vh - 60px - 50px - 10px);
     display: flex;
     flex-direction: column;
@@ -85,32 +88,32 @@ body {
     align-items: center;
 }
 
-.name{
+.name {
     font-size: 10rem;
     letter-spacing: 1.6rem;
     position: relative;
 }
 
-.name::after{
+.name::after {
     content: 'Shivhare';
     font-family: 'Smooch', cursive;
     font-size: 8.1rem;
     letter-spacing: 0.15rem;
     color: #9b6dc2;
-    position:absolute;
+    position: absolute;
     top: 4.1rem;
     left: 3.3rem;
 }
 
-.text{
+.text {
     font-size: 1.57rem;
 }
 
-.about{
+.about {
     margin-top: 60px;
 }
 
-.about a{
+.about a {
     text-decoration: none;
     border: 2px solid #9b6dc2;
     border-radius: 5px;
@@ -123,14 +126,15 @@ body {
 }
 
 @media only screen and (max-width: 700px) {
-    .navbar{
+    .navbar {
         width: 80%;
     }
 
     .menu {
         flex-direction: column;
         position: fixed;
-        inset: 5px 5px 5px 30%; /* inset means (top, right, bottom, left) */
+        inset: 5px 5px 5px 30%;
+        /* inset means (top, right, bottom, left) */
         padding: min(15vh, 10rem) min(20vw, 5rem);
         background-color: #9a6dc229;
         backdrop-filter: blur(1.8rem);
@@ -139,22 +143,22 @@ body {
     }
 
     .menu[show="true"] {
-        transform: translateX(0%); 
+        transform: translateX(0%);
     }
 
-    .menu li{
+    .menu li {
         margin: 15px 0px;
     }
 
-    .nav-toggle{
+    .nav-toggle {
         display: block;
         z-index: 10;
         border: none;
         background: none;
         cursor: pointer;
     }
-    
-    .nav-toggle img{
+
+    .nav-toggle img {
         height: 1.55rem;
         aspect-ratio: 1;
     }
@@ -167,23 +171,23 @@ body {
         height: 18px;
     }
 
-    .name{
+    .name {
         font-size: 4.2rem;
         letter-spacing: 1rem;
     }
 
-    .name::after{
+    .name::after {
         font-size: 3.8rem;
         top: 1.6rem;
         left: 1.4rem;
     }
 
-    .text{
+    .text {
         font-size: 0.8rem;
         margin-top: 5px;
     }
 
-    .about a{
+    .about a {
         font-size: 0.8rem;
     }
 }
